TextEditor: Fix code completion and pasting in snippets.

Fixes case 2 and 3 of QTCREATORBUG-14633.

Task-number: QTCREATORBUG-14633
Change-Id: I19bf3c81c26f8a89a508591b0e7264251e0e6254
Reviewed-by: David Schulz <david.schulz@theqtcompany.com>